# csv_profiler

./: .gitignore  Cargo.toml
benches/: benchmarks_main.rs
src/: datatypes.rs  lib.rs  main.rs  profiler.rs  stats.rs
