[package]
name = "csv_profiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecount = "0.6.3"

[dev-dependencies]
strum = "0.24"
strum_macros = "0.24"
criterion = "0.4"

[[bench]]
name = "benchmarks_main"
harness = false
